Adding Client DN check
